parsedMusicXMLObj now has absolute- and playedMeasureNumber indices
Next: check that refactoring didn't break anything, esp with alignment
Next: finish fixed global structure for "just the way you are"
Next: sample segment structure sizes empirically
Next: extract seg-spec lyric templates